// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemCard > should match snapshot as album 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/album/undefined"
      >
        <div
          class="border border-card text-card-foreground shadow p-4 bg-neutral-800 rounded-lg flex flex-col gap-3"
        >
          <img
            alt="Album 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="200"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75 2x"
            style="color: transparent; min-height: 200px; max-height: 200px; min-width: 200px; max-width: 200px; object-fit: cover;"
            width="200"
          />
          <div>
            <a
              class="inline-flex items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg justify-start"
              href="/album/undefined"
            >
              <span
                class="truncate max-w-[200px]"
              >
                Album 1
              </span>
            </a>
            <div
              class="flex flex-row justify-between"
            >
              <div>
                NaN
                 • 
                <span
                  class="capitalize"
                />
              </div>
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      href="/album/undefined"
    >
      <div
        class="border border-card text-card-foreground shadow p-4 bg-neutral-800 rounded-lg flex flex-col gap-3"
      >
        <img
          alt="Album 1"
          class="rounded-md"
          data-nimg="1"
          decoding="async"
          height="200"
          loading="lazy"
          src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75 2x"
          style="color: transparent; min-height: 200px; max-height: 200px; min-width: 200px; max-width: 200px; object-fit: cover;"
          width="200"
        />
        <div>
          <a
            class="inline-flex items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg justify-start"
            href="/album/undefined"
          >
            <span
              class="truncate max-w-[200px]"
            >
              Album 1
            </span>
          </a>
          <div
            class="flex flex-row justify-between"
          >
            <div>
              NaN
               • 
              <span
                class="capitalize"
              />
            </div>
            <button
              data-state="closed"
            >
              <a
                href="https://spotify.com"
                target="_blank"
              >
                <img
                  alt=""
                  class="min-w-[20px] h-[20px]"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                  srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                  style="color: transparent;"
                  width="20"
                />
              </a>
            </button>
          </div>
        </div>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemCard > should match snapshot as artist 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/album/123"
      >
        <div
          class="border border-card text-card-foreground shadow p-4 bg-neutral-800 rounded-lg flex flex-col gap-3"
        >
          <img
            alt="Darkthrone"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="200"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75 2x"
            style="color: transparent; min-height: 200px; max-height: 200px; min-width: 200px; max-width: 200px; object-fit: cover;"
            width="200"
          />
          <div>
            <a
              class="inline-flex items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg justify-start"
              href="/album/123"
            >
              <span
                class="truncate max-w-[200px]"
              >
                Darkthrone
              </span>
            </a>
            <div
              class="flex flex-row justify-between"
            >
              <div />
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      href="/album/123"
    >
      <div
        class="border border-card text-card-foreground shadow p-4 bg-neutral-800 rounded-lg flex flex-col gap-3"
      >
        <img
          alt="Darkthrone"
          class="rounded-md"
          data-nimg="1"
          decoding="async"
          height="200"
          loading="lazy"
          src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75 2x"
          style="color: transparent; min-height: 200px; max-height: 200px; min-width: 200px; max-width: 200px; object-fit: cover;"
          width="200"
        />
        <div>
          <a
            class="inline-flex items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg justify-start"
            href="/album/123"
          >
            <span
              class="truncate max-w-[200px]"
            >
              Darkthrone
            </span>
          </a>
          <div
            class="flex flex-row justify-between"
          >
            <div />
            <button
              data-state="closed"
            >
              <a
                href="https://spotify.com"
                target="_blank"
              >
                <img
                  alt=""
                  class="min-w-[20px] h-[20px]"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                  srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                  style="color: transparent;"
                  width="20"
                />
              </a>
            </button>
          </div>
        </div>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemCard > should match snapshot as track 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/album/123"
      >
        <div
          class="border border-card text-card-foreground shadow p-4 bg-neutral-800 rounded-lg flex flex-col gap-3"
        >
          <img
            alt="Track 1"
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="200"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75 2x"
            style="color: transparent; min-height: 200px; max-height: 200px; min-width: 200px; max-width: 200px; object-fit: cover;"
            width="200"
          />
          <div>
            <a
              class="inline-flex items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg justify-start"
              href="/album/123"
            >
              <span
                class="truncate max-w-[200px]"
              >
                Track 1
              </span>
            </a>
            <div
              class="flex flex-row justify-between"
            >
              <div>
                <span>
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                    href="/artist/123"
                  >
                    Darkthrone
                  </a>
                </span>
              </div>
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      href="/album/123"
    >
      <div
        class="border border-card text-card-foreground shadow p-4 bg-neutral-800 rounded-lg flex flex-col gap-3"
      >
        <img
          alt="Track 1"
          class="rounded-md"
          data-nimg="1"
          decoding="async"
          height="200"
          loading="lazy"
          src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=640&q=75 2x"
          style="color: transparent; min-height: 200px; max-height: 200px; min-width: 200px; max-width: 200px; object-fit: cover;"
          width="200"
        />
        <div>
          <a
            class="inline-flex items-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 p-0 text-lg justify-start"
            href="/album/123"
          >
            <span
              class="truncate max-w-[200px]"
            >
              Track 1
            </span>
          </a>
          <div
            class="flex flex-row justify-between"
          >
            <div>
              <span>
                <a
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                  href="/artist/123"
                >
                  Darkthrone
                </a>
              </span>
            </div>
            <button
              data-state="closed"
            >
              <a
                href="https://spotify.com"
                target="_blank"
              >
                <img
                  alt=""
                  class="min-w-[20px] h-[20px]"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                  srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                  style="color: transparent;"
                  width="20"
                />
              </a>
            </button>
          </div>
        </div>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
